[package]
name = "ctof"
version = "0.1.0"
authors = ["Rocky Neurock <jneurock@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A small program to convert Celsius to Fahrenheit."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
